--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -154,7 +154,7 @@ main#iteration-info {
 
 .file-drop-target {
     position: fixed;
-    left: -1000px;
+    left: -10000px;
 }
 
 $picker-dimensions: 30px;
@@ -1230,7 +1230,7 @@ td.major-alert {color: red !important;}
    position:relative;
    transition:all 0.2s ease-in;
    --col-width:calc(1100px / var(--cols));
-   z-index:-1;
+   z-index:0;
 
    #yaxis {
       position:absolute;
@@ -1291,11 +1291,14 @@ td.major-alert {color: red !important;}
 
 #hamburger-settings-menu {
    animation:1.65s initialLoad forwards;
+   animation:0.65s initialLoad forwards;
    position:absolute;
-   right:10px;
+   right:0px;
    top:20px;
    text-align:right;
-   
+   z-index: 10000;
+   cursor: pointer;
+
    span {
       display:block;
       background-color:#666;
@@ -1322,7 +1325,7 @@ td.major-alert {color: red !important;}
       width:21px;
       height:17px;
       border-radius:7px;
-      right:0px;
+      right:12px;
       top:9px;
       text-align:center;
       z-index:50;
@@ -1332,7 +1335,7 @@ td.major-alert {color: red !important;}
       box-shadow:inset 6px 0 5px #FFF2, inset 0 5px 5px #FFF2, inset -6px 0 5px #FFF2, inset 0 -5px 5px #FFF2;
       transition:.2s all ease-out;
       transition-delay:1.6s;
-      
+      cursor:pointer;
    }
    
    .grid-options-menu {
@@ -1342,8 +1345,8 @@ td.major-alert {color: red !important;}
       padding-bottom:0;
       padding:0;
       max-width:21px;
-      position:fixed;
-      width:130px;
+    //   position: absolute;;
+    //   max-width:130px;
       border-top:2px solid #CCC;
       border-bottom:2px solid #CCC;
       background-color:#666;
@@ -1366,6 +1369,8 @@ form {
       box-shadow:none;
       transition-delay:1.0s;
       animation-duration:0.8s;
+      z-index: 1000;
+      cursor: pointer;
    }
    span {
    
