--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -687,6 +687,15 @@ button.add-record {
     
         &:nth-child(-n + 2) {
             text-align: left;
+            font-size:12px;
+        }
+    
+        &:nth-child(-n + 3) a {
+            font-size:11px;
+        }
+    
+        &:nth-child(-n + 4) a {
+            font-size:11px;
         }
     
         &:nth-child(n + 3) {
