--- a/public/lib/css/flambe.css
+++ b/public/lib/css/flambe.css
@@ -1372,6 +1372,8 @@ td.major-alert {
   transition: all 0.2s ease-in;
   --col-width:calc(1100px / var(--cols));
   z-index: 0;
+  -webkit-transform: translatey(100px);
+          transform: translatey(100px);
 }
 
 #burndown-chart-panel #yaxis {
