--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -1239,7 +1239,7 @@ td.major-alert {color: red !important;}
    position:relative;
    transition:all 0.2s ease-in;
    --col-width:calc(1100px / var(--cols));
-   z-index:0;
+   z-index:-1;
    transform:translatey(100px);
 
    #yaxis {
@@ -1308,6 +1308,7 @@ td.major-alert {color: red !important;}
    text-align:right;
    z-index: 10000;
    cursor: pointer;
+   display:none;
 
    span {
       display:block;
