--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -656,6 +656,11 @@ button.add-record {
         font-family: sans-serif;
         tr {
             border-bottom: 3px solid #000;
+            &::before {
+                content:attr(id);
+                display:table-cell;
+
+            }
 
             th {
                 padding: 3px 10px;
