--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -64,21 +64,24 @@ main#iteration-info {
                 border-radius: 6px;
                 font-size: 18px;
                 width: 100%;
-                height: 30px;
                 padding: 0 0 2px 8px;
                 transition: color 0.15s ease-out;
-                color: white;
-
-                &:focus,
-                &:valid {
-                    color: black;
-                }
-                &:focus + label,
-                &:valid + label {
+                color: #111;
+                
+                & + label {
                     margin: -50px 0 0 -5px;
                     font-size: 13px;
                 }
             }
+            
+            select {
+                font-size:14px;
+                &:not(#selMTV){
+                    height: 30px;
+                }
+            }
+
+            
 
             input.faux-selected ~ select{
                 height:auto;
