--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -44,6 +44,55 @@ body {
     margin: 0;
 }
 
+#loading{
+    transition:0.75s all ease-in-out;
+    position:fixed;
+    display: inline-block;
+    width:100vw; 
+    height:100vh;
+    top:0;
+    left:0;
+    text-align:center;
+    transform:scale(0);
+    opacity:0;
+    z-index: -1;
+
+    &::after{
+        content:'';
+        position:absolute;
+        top:0;
+        left:0;
+        width:100vw; 
+        height:100vh;
+        z-index: 10;
+        background:url('/assets/images/loader.apng') no-repeat center;
+    }
+
+
+    &.visible {
+        vertical-align: middle;
+        z-index: 10000;
+        transform:scale(1);
+        opacity:1;
+
+        &::before{
+            content:'';
+            position:absolute;
+            top:0;
+            left:0;
+            width:100vw; 
+            height:100vh;
+            z-index: -1;
+            background: radial-gradient(#FFFD 30%, #FFF0);
+        }
+
+        & + #ui {
+            overflow:hidden;
+            max-height:100%;
+        }
+    }
+}
+
 main#iteration-info {
     width: 702px;
     position: relative;
@@ -95,7 +144,7 @@ main#iteration-info {
         margin: 5px 0 15px;
         padding: 20px 10px 10px;
         border: 1px solid #94949f;
-        border-radius: 10px 10px 0 0;
+        border-radius: 10px;
         display: block;
         min-width: 100%;
         width: 100%;
@@ -408,65 +457,6 @@ $picker-dimensions: 30px;
     }
 }
 
-.pbars {
-    min-width: 95%;
-    height: 25px;
-    text-align: center;
-    display: none;
-
-    .progress-bar {
-        display: inline-block;
-        animation: manifest 0.2s ease-out calc(var(--bc) * 1s) forwards;
-        width: 216px;
-        height: 18px;
-        line-height: calc(17.5px);
-        text-align: left;
-        border: 1px solid #333;
-        border-radius: 6px;
-        margin: 7.2px;
-        position: relative;
-        overflow: hidden;
-        background: var(--bar-color) repeating-linear-gradient(45deg, #ffffff88 0, #ffffff88 10px, #ffffffbb 10px, #ffffffbb 20px);
-        box-shadow: inset 2px 2px 0 #fff, inset 2px -2px 0 #fff, inset -2px 2px 0 #fff, inset -2px -2px 0 #fff;
-        opacity: 0;
-        transform: scale(0);
-
-        &::before,
-        &::after {
-            content: '';
-            border-radius: 5.14286px;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            z-index: 1;
-        }
-
-        &::after {
-            content: attr(title);
-            text-align: center;
-            font-weight: bold;
-            line-height: 18px -0.5;
-            color: #fffc;
-            text-shadow: 0 -1px 0 #00000555, 0 1px 0 #00000055, -1px 0 0 #00000055, 1px 0 0 #00000055, 0 -1px 0 var(--bar-color), 0 1px 0 var(--bar-color), -1px 0 0 var(--bar-color), 1px 0 0 var(--bar-color);
-            opacity: 0.85;
-            font-size: 13.5px;
-        }
-
-        &::before {
-            animation: progress var(--process) linear forwards;
-            animation-delay: var(--seq);
-            width: 0%;
-            background: var(--bar-color) repeating-linear-gradient(45deg, #00000033 0, #00000033 5.94px, #00000022 5.94px, #00000022 11.88px);
-            height: 100%;
-            max-height: calc(100% - 3px);
-            max-width: calc(100% - 3px);
-            top: 1.5px;
-            left: 1.5px;
-            box-shadow: 1px 1px 10px var(--bar-color);
-        }
-    }
-}
-
 div.sort-order {
     ul.has-draggable-children {
         margin: 0;
@@ -588,6 +578,31 @@ div.sort-order {
         }
     }
 }
+
+.sort-order {
+    margin-top: 50px;
+    position: relative;
+}
+
+.sort-order::before {
+    /* content: '4'; */
+    content: '4';
+    display:block;
+    position:absolute;
+    width:96px;
+    height:96px;
+    line-height:128px;
+    font-weight:900;
+    font-size:96px;
+    left:-112px;
+    border-radius: 50%;
+    top: -20px;
+    background-color:#DDD;
+    color:white;
+    text-indent: 34px;
+}
+
+.sort-order::after {content: 'Import CSV Data Files';position: absolute;top: -25px;font-weight: 900;font-style:italic;font-size: 21px;left:0;color: #CCC;}
 
 button.add-record {
     background-image: url('data: image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="167.7" height="17.7"%3E%3Cpath fill="%23D7D7D7" fill-rule="evenodd" d="M12.6 3.3h147.8a6 6 0 0 1 6 6v1.4a6 6 0 0 1-6 6H12.6a6 6 0 0 1-6-6V9.3a6 6 0 0 1 6-6z"/%3E%3Cpath fill="none" stroke="%23707070" stroke-dasharray="2.7 1.3" stroke-width=".7" d="M13.3 4h146.4a6 6 0 0 1 0 12H13.3a6 6 0 0 1 0-12z" opacity=".5"/%3E%3Cpath fill="%237D7D7D" fill-rule="evenodd" d="M151.3 12.5v1.2h-5.5V6.5h5.3v1.2h-3.8v1.6h3.6v1.2h-3.6v2h4zm-7.1-.2l.9 1.4h-1.8l-1-1.6c-.4-.6-.6-1-.8-1-.1-.2-.3-.3-.4-.3l-.7-.1h-.3v3h-1.5V6.5h3c.8 0 1.4 0 1.7.2.4.1.7.3.9.7.2.3.3.7.3 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.8.6.8 1.2zM142.8 9l.2-.5c0-.2 0-.4-.2-.6a.9.9 0 0 0-.5-.3H140v1.8h2.3l.4-.4zM132 6.5h5.3v1.2h-3.9v1.6h3.6v1.2h-3.6v2h4v1.2H132V6.5zm-3 4h-2.8v3.2h-1.4V6.5h1.4v2.8h2.8V6.5h1.5v7.2H129v-3.2zM117 13c-.2.3-.6.5-1 .6l-1.3.2H112V6.5h2.6l1.4.1c.4.2.8.4 1 .7.4.3.6.7.8 1.2l.2 1.6c0 .6 0 1.1-.2 1.6s-.5 1-.8 1.2zm-.6-4c-.1-.4-.3-.6-.5-.8-.1-.1-.3-.3-.6-.3h-1.9v4.7h1.1l.9-.1.6-.3.4-.7.1-1.3-.1-1.3zm-6 3.4l.8 1.4h-1.7l-1-1.6-.8-1c-.1-.2-.3-.3-.4-.3l-.8-.1h-.2v3h-1.5V6.5h3c.8 0 1.4 0 1.7.2.4.1.6.3.8.7.2.3.4.7.4 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.7.6.9 1.2zM109 9l.2-.5-.2-.6a.9.9 0 0 0-.6-.3h-2.1v1.8h2.3l.4-.4zm-8.8 4.7c-1 0-1.9-.3-2.5-1-.6-.6-1-1.5-1-2.7 0-.7.2-1.3.4-1.8.1-.4.4-.7.6-1 .3-.3.6-.5 1-.6a4 4 0 0 1 1.5-.3c1 0 1.9.3 2.5 1 .7.6 1 1.5 1 2.7 0 1.1-.3 2-1 2.7-.6.7-1.4 1-2.5 1zm1.4-5.6c-.3-.4-.8-.6-1.4-.6-.6 0-1 .2-1.4.6-.4.4-.6 1-.6 1.9 0 .8.2 1.4.6 1.8.4.4.8.6 1.4.6.6 0 1-.2 1.4-.6.4-.4.6-1 .6-1.8 0-.9-.2-1.5-.6-1.9zm-8.8 4.3c.4 0 .7 0 1-.3.3-.3.5-.6.6-1.2l1.4.5c-.2.8-.6 1.3-1 1.7a3 3 0 0 1-2 .6 3 3 0 0 1-2.3-1c-.6-.6-1-1.5-1-2.7a4 4 0 0 1 1-2.7c.6-.7 1.4-1 2.4-1a3 3 0 0 1 2.2.8c.3.3.5.7.7 1.3l-1.4.3c-.1-.4-.3-.7-.6-.9-.2-.2-.6-.3-1-.3-.5 0-1 .2-1.2.6-.4.4-.5 1-.5 1.8 0 1 .1 1.6.5 2 .3.4.7.5 1.2.5zm-9.6-6h5.3v1.2h-3.9v1.6h3.6v1.2h-3.6v2h4v1.2h-5.4V6.5zm-1.7 5.8l.9 1.4h-1.7l-1-1.6-.8-1c-.2-.2-.3-.3-.5-.3l-.7-.1h-.3v3H76V6.5h3c.8 0 1.3 0 1.7.2.3.1.6.3.8.7.2.3.3.7.3 1.1 0 .5-.1 1-.5 1.3-.3.4-.7.6-1.4.7l.8.6.8 1.2zM80.2 9l.1-.5c0-.2 0-.4-.2-.6a.9.9 0 0 0-.5-.3h-2.2v1.8h2.4l.4-.4zm-12.4 3H65l-.6 1.6h-1.5l2.7-7.2h1.6l2.8 7.2h-1.5l-.7-1.7zm-1.4-4l-1 2.7h2l-1-2.6zm-11 5.6h-1.5v-6h-2.1V6.5h5.7v1.2h-2.1v6zm-4.7-1.4l.8 1.4h-1.7l-1-1.6-.8-1c-.1-.2-.3-.3-.4-.3l-.8-.1h-.2v3H45V6.5h3c.8 0 1.4 0 1.7.2.4.1.6.3.8.7.2.3.4.7.4 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.7.6.9 1.2zM49.3 9l.2-.5-.2-.6a.9.9 0 0 0-.6-.3h-2.1v1.8h2.3l.4-.4zM38.4 6.5h5.3v1.2H40v1.6h3.6v1.2h-3.6v2h4v1.2h-5.5V6.5zm-3.8 2.7a7 7 0 0 1 1.6.5c.3.2.6.4.7.7.2.3.3.7.3 1.2a2.1 2.1 0 0 1-1.3 2 4 4 0 0 1-1.5.2 3 3 0 0 1-2.1-.6c-.5-.5-.8-1-.9-1.9l1.4-.1c.1.5.3.8.5 1 .3.3.6.4 1 .4.6 0 .9-.1 1.1-.3.3-.2.4-.5.4-.7 0-.2 0-.3-.2-.5l-.5-.3-1.1-.3a4 4 0 0 1-1.7-.7 1.9 1.9 0 0 1-.3-2.4c.2-.4.5-.6.9-.8l1.4-.2c.9 0 1.6.2 2 .6.5.4.7.9.7 1.5l-1.4.1c0-.4-.2-.6-.4-.8l-1-.2c-.3 0-.7 0-1 .2l-.1.5c0 .1 0 .3.2.4.2.2.6.3 1.3.5zM25.9 9v4.7h-1.3V6.5H26l3 4.8V6.5h1.3v7.2h-1.5L26 9zm-4.1-2.5h1.4v7.2h-1.4V6.5z"/%3E%3C/svg%3E');
