--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -33,7 +33,7 @@ body {
     width: 100vw;
     // height: 100vh;
     // max-height: 100%;
-    padding: 40px 0 70px;
+    padding: 10px 0 70px;
     margin: 0;
 }
 
@@ -617,8 +617,12 @@ button.add-record {
 }
 #output-panels {
     position: relative;
-    max-width: 80%;
+    max-width: calc(100% - 20px);
     margin: 0 auto;
+    overflow-x: auto;
+    border: 3px double #999;
+    padding: 0 30px;
+    margin-top: 25px;
 
     aside.status-filters {
         background: #ffe;
@@ -1412,6 +1416,11 @@ td.major-alert {color: red !important;}
       border:1px solid transparent;
       top:50px;
       left:calc(-50px + var(--col-width) + (95px * var(--seq)));
+   }
+
+   canvas {
+    //    border:10px solid red;
+       min-width:1100px;
    }
 }
 #popover {
