--- a/_scss/team-members.scss
+++ b/_scss/team-members.scss
@@ -73,13 +73,12 @@
         button {
             padding:0;
             margin:0;
-            line-height:0px;
+            line-height:0;
             font-size:19px;
             height:16px;
             width:16px;
             float:right;
             background-color:transparent;
-            border: 0 none;
             border-radius:50%;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 455 455'%3E%3Ccircle cx='227.6' cy='227.6' r='227.6' fill='%23c00'/%3E%3Cpath fill='%23A00' d='M455 228A228 228 0 0150 370 228 228 0 00370 50c52 41 85 105 85 178z'/%3E%3Cpath fill='%23fff' d='M331 331c-8 9-22 9-31 0l-72-72-73 72c-9 9-23 9-31 0-9-8-9-22 0-31l72-72-72-73c-9-9-9-23 0-31 8-9 22-9 31 0l73 72 72-72c9-9 23-9 31 0 9 8 9 22 0 31l-72 73 72 72c9 9 9 23 0 31z'/%3E%3C/svg%3E");
             border:1px solid #000A;
